--- a/frontend/play.folder/play.style.css
+++ b/frontend/play.folder/play.style.css
@@ -127,6 +127,7 @@ nav{
 
 .play-video video{
     width: 100%;
+    height: 600px;
     border-radius: 10px;
 }
 
@@ -265,4 +266,70 @@ nav{
     background: transparent;
 }
 
+.old-comments{
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+}
+.old-comments img{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
 
+.old-comments h3{
+    font-size: 14px;
+    margin-bottom: 2px;
+}
+
+.old-comments h3 span{
+    font-size: 12px;
+    color: #5a5a5a;
+    font-weight: 8px;
+    margin-left: 8px;
+}
+
+.old-comments .comment-action{
+    display: flex;
+    align-self: center;
+    margin: 8px 0;
+    font-size: 14px;
+}
+
+.old-comments .comment-action img{
+    border-radius: 0;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+
+.old-comments .comment-action span{
+    margin-right: 20px;
+}
+
+.old-comments .comment-action a{
+    color: #03113e;
+}
+
+
+@media(max-width:900px)
+{
+    .play-video{
+        flex-basis: 100%;
+    }
+    .right-sidebar{
+        flex-basis: 100%;
+    }
+    .play-container{
+        padding-left: 5%;
+    }
+    .vid-description{
+        padding-left: 0;
+    }
+    .play-video .play-video-info{
+        margin-left: 0;
+        margin-right: 15px;
+        margin-top: 15px;
+    }
+}
