upload video menu-bar complete

--- a/view/index.html
+++ b/view/index.html
@@ -23,10 +23,19 @@
             <img src="../frontend/image.folder/mike.png" class="mike_icon">
         </div>
         <div class="nav-right ">
-            <img src="../frontend/image.folder/upload.png" class="img2">
-            <img src="../frontend/image.folder/more.png" class="img2">
-            <img src="../frontend/image.folder/notification.png" class="img2">
-            <img src="../frontend/image.folder/avatar.jpg" id="avatar">
+            <ul class="nav_ul">
+                <li class="nav_li">
+                    <img src="../frontend/image.folder/upload.png" class="upload">
+                    <div class="sub-class">
+                        <ul class="upload_ul">
+                            <li><img src="../frontend/image.folder/upload_video.png" alt=""><a href="">Upload Video</a></li>
+                            <li><img src="../frontend/image.folder/upload_post.png" alt=""><a href="">Upload Post</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="nav_li"><img src="../frontend/image.folder/notification.png" class="img2"></li>
+                <li class="nav_li"><img src="../frontend/image.folder/avatar.jpg" id="avatar"></li>
+            </ul> 
         </div>
     </nav>
 
@@ -65,7 +74,7 @@
 
 <div class="container">
     <div class="banner">
-        <img src="../frontend/image.folder/banner.jpg" >
+        <img src="../frontend/image.folder/banner1.jpg" >
     </div>
     <div class="list-container">
         
