--- a/view/style.css
+++ b/view/style.css
@@ -31,12 +31,56 @@ img{
 
 
 .nav-right{
-    width: 200px;
-    height: 30px;
-   /* border: 2px solid red; */
-   justify-content: space-around;
+   background-color: white;
+   text-align: center;
+   /* border: 1px solid red; */
+}
+
+.nav-right .nav_ul{
+    display: inline-flex;
+    align-items: center;
+    list-style: none;
+    color: #fff;
+    /* border: 1px solid red; */
+}
+
+.nav-right .nav_ul .nav_li{
+    width:  100%;
+    /* border: 1px solid rebeccapurple; */
+    padding-left: 30px;
+}
+
+.sub-class{
+    display: none;
+    /* border: 1px solid red; */
+}
+
+.sub-class ul{
+    display: flex;
+    flex-direction: column;
+}
+
+.larger_ul{
+   display: block;
+   position: absolute;
+   background-color:white;
+   color: rgb(16, 15, 15);
+   margin-top: 20px;
    display: flex;
-    flex-direction: row;
+   flex-direction: column;
+   border-radius: 5px;
+   /* border: 1px solid rgb(10, 9, 9); */
+}
+
+.larger_ul li{
+    display: flex;
+    width: 150px;
+    list-style-type: none;
+    padding: 5px;
+}
+
+.larger_ul li img{
+    margin-right: 10px;
 }
 
 nav{
@@ -213,6 +257,7 @@ nav{
 
 .banner img{
     width: 100%;
+    height: 300px;
     border-radius: 8px;
 }
 
@@ -272,9 +317,7 @@ nav{
         padding-right: 5%;
     }
 
-    .nav-right img{
-        display: none;
-    }
+   
     .nav-right #avatar{
         display: block;
         width: 30px;
