--- a/view/style.css
+++ b/view/style.css
@@ -7,7 +7,7 @@
 
 a{
     text-decoration: none;
-    color: #5a5a5a;
+    color: #212122;
 }
 
 img{
@@ -110,6 +110,31 @@ nav{
     height: 25px;
 }
 
+.nav-right button
+{
+    border-radius: 20px;
+    width: 100px;
+   outline: 0px;
+   border: 1px solid #212122;
+   padding: 3px;
+    background: transparent;
+    cursor: pointer;
+
+}
+.nav-right button p{
+    padding-left: 5%;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.nav-right .signInBtn{
+display: flex;
+/* flex-direction: row; */
+ justify-content: center;
+ align-items: center;
+}
+
+
 .nav-middle{
     width: 300px;
     height: 40px;
@@ -149,7 +174,7 @@ nav{
     position: fixed;
     /* border: 1px solid red; */
     top: 0px;
-    padding-left: 2%;
+    /* padding-left: 2%; */
     margin-top: 60px;
 }
 
@@ -158,7 +183,9 @@ nav{
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 2%;
+    padding-left: 5%;
+    padding-top: 2%;
+    
     margin-bottom: 20px;
     flex-wrap: wrap;
     /* border: 1px solid red; */
@@ -167,8 +194,8 @@ nav{
 
 
 .shortcut-link a img{
-    width: 25px;
-    height: 25px;
+    width: 22px;
+    height: 22px;
     margin-right: 10px;
     
 }
@@ -187,7 +214,47 @@ nav{
     border: 0px;
     height: 1px;
     background: #a1a0a0;
-    width: 85%;
+    width: 75%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.singInInfo{
+    display: flex;
+    width: 75%;
+    /* border: 2px solid red; */
+}
+
+.singInInfo .info{
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+
+.singInInfo button
+{
+    border-radius: 20px;
+    width: 100px;
+    height: 35px;
+   outline: 0px;
+   border: 1px solid #212122;
+   padding: 3px;
+    background: transparent;
+    cursor: pointer;
+
+}
+.singInInfo button p{
+    padding-left: 5%;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.singInInfo .signInBtn{
+display: flex;
+/* flex-direction: row; */
+ justify-content: center;
+ align-items: center;
 }
 
 .subscribed-list h3{
@@ -334,3 +401,4 @@ nav{
         width: 90px;
     }
 }
+
