frontend backend link

--- a/frontend/login_page/login.style.css
+++ b/frontend/login_page/login.style.css
@@ -20,7 +20,7 @@
      width: 450px;
      /* position: absolute; 
       top: 50%; */
-     border: 1px solid red;
+     /* border: 1px solid red; */
      /* left:50%; 
      transform: translate(-50%,-50%); */
      background: #fff;
