--- a/view/index.html
+++ b/view/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="nav-right ">
             <ul class="nav_ul">
-                <li class="nav_li">
+                <li class="nav_li  upload_li">
                     <img src="../frontend/image.folder/upload.png" class="upload">
                     <div class="sub-class">
                         <ul class="upload_ul">
@@ -34,7 +34,26 @@
                     </div>
                 </li>
                 <li class="nav_li"><img src="../frontend/image.folder/notification.png" class="img2"></li>
-                <li class="nav_li"><img src="../frontend/image.folder/avatar.jpg" id="avatar"></li>
+                <li class="nav_li profile_li">
+                    <img src="../frontend/image.folder/avatar.jpg" id="avatar">
+                    <div class="profile_sub_class  ">
+                        <div class="profile_detail">
+                           
+                                <div class="profile_icon">
+                                    <img src="../frontend/image.folder/avatar.jpg" id="avatar">
+                                </div>
+                                <div class="profile_name">
+                                    <p class="fullName"> shah rahul</p>
+                                    <p class="userName">shah-R60</p>
+                                    <p>View your channel</p>
+                                </div>
+                        </div>
+                        <hr>
+                        <div class="logOut" style="color: black;">
+                            Lorem ipsum dolor sit
+                        </div> 
+                    </div>
+                </li>
                 <li class="nav_li" id="signInIcon" style="display: none;" ><button class="signInBtn"><img src="../frontend/image.folder/signin.png" id="avatar"><p>sign in</p></button></li>
             </ul> 
         </div>
