--- a/view/style.css
+++ b/view/style.css
@@ -14,11 +14,23 @@ img{
     cursor: pointer;
 }
 
+
+nav{
+    padding: 10px 2%;
+    justify-content: space-between;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    background: #fff;
+    position: sticky;
+    top:0;
+    z-index: 10;
+}
+
 .flex-div{
     display: flex;
     flex-direction: row;
     align-items: center;
 }
+
 .nav-left{
     width: 150px;
     height: 30px;
@@ -26,7 +38,6 @@ img{
    justify-content: space-evenly;
    display: flex;
     flex-direction: row;
-    
 }
 
 
@@ -55,20 +66,34 @@ img{
     /* border: 1px solid red; */
 }
 
+
 .sub-class ul{
     display: flex;
     flex-direction: column;
 }
 
+
+.upload_li
+{
+    /* background-color: black; */
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+}
+
+
 .larger_ul{
    display: block;
    position: absolute;
    background-color:white;
-   color: rgb(16, 15, 15);
-   margin-top: 20px;
+   color: black;
+   margin-top: 50px;
+   /* margin-right: 30px; */
+   /* margin-right: 200px; */
    display: flex;
    flex-direction: column;
-   border-radius: 5px;
+   border-radius: 10px;
    /* border: 1px solid rgb(10, 9, 9); */
 }
 
@@ -83,14 +108,69 @@ img{
     margin-right: 10px;
 }
 
-nav{
-    padding: 10px 2%;
-    justify-content: space-between;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    background: #fff;
-    position: sticky;
-    top:0;
-    z-index: 10;
+
+
+
+
+
+.profile_sub_class{
+    display: none;
+}
+
+.profile_li{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.larger_profile{
+        position: absolute;
+        background-color:white;
+        display: flex;  
+        flex-direction: column; 
+        /* border: 2px solid red; */
+        color: black;
+        margin-top: 50px;
+        padding: 5px;
+        border-radius: 10px;
+        justify-content: end;
+        align-items: end;      
+}
+
+.larger_profile .profile_detail{
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-around;
+    color: black;
+    width: 200px;
+    /* border: 2px solid rgb(34, 0, 255); */
+    margin-bottom: 5%;
+}
+
+
+.profile_detail  .profile_name{
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-left: 10px;
+}
+
+
+.larger_profile hr{
+    color: black;
+    width: 100%;
+    margin-bottom: 3%;
+}
+
+.profile_name p{
+   margin-top: 5px;
+}
+
+
+.profile_icon{
+   margin-top: 15px;
 }
 
 #avatar{
@@ -105,6 +185,8 @@ nav{
    margin-right:10px ;
 }
 
+
+/* signIn css */
 .nav-right img{
     width: 25px;
     height: 25px;
@@ -135,12 +217,16 @@ display: flex;
 }
 
 
+
+
+
 .nav-middle{
     width: 300px;
     height: 40px;
     display: flex;
     flex-direction: row;
 }
+
 .search-box{
     width: 300px;
     height: 40px;
@@ -166,6 +252,9 @@ display: flex;
     height: 20px;
     margin-top: 3px;
 }
+
+
+
 /* -------------sidebar-------------------*/
 .sidebar{
     background: #fff;
@@ -325,7 +414,7 @@ display: flex;
 .banner img{
     width: 100%;
     height: 300px;
-    border-radius: 8px;
+    border-radius: 12px;
 }
 
 .list-container{
@@ -341,7 +430,7 @@ display: flex;
   width: 100%;
   height: 240px;
   /* height: fit-content; */
-  border-radius: 5px;
+  border-radius: 10px;
   /* margin-left: 2px; */
 }
 
