making history page

--- a/view/index.html
+++ b/view/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project-primeflix</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <!-- ---------------------------navbar--------------------------- -->
 <body >
@@ -40,17 +41,18 @@
                         <div class="profile_detail">
                            
                                 <div class="profile_icon">
-                                    <img src="../frontend/image.folder/avatar.jpg" id="avatar">
+                                    <img src="../frontend/image.folder/avatar.jpg" id="avatar" class="av">
                                 </div>
                                 <div class="profile_name">
                                     <p class="fullName"> shah rahul</p>
                                     <p class="userName">shah-R60</p>
-                                    <p>View your channel</p>
+                                    <a href="../frontend/profile_page/profile.html">View your channel</a>
                                 </div>
                         </div>
                         <hr>
                         <div class="logOut" style="color: black;">
-                            Lorem ipsum dolor sit
+                           <img src="../frontend/image.folder/logout.png" alt="logOut">
+                           <h4>Sign Out</h4>
                         </div> 
                     </div>
                 </li>
@@ -59,11 +61,6 @@
         </div>
     </nav>
 
-
-
-    
-
- 
  <!-- -------------------------sidebar--------------------------- -->
 
 
