--- a/view/index.html
+++ b/view/index.html
@@ -16,6 +16,7 @@
             <img src="../frontend/image.folder/logo_light.png" class="logo_icon">
         </div>
 
+        <!-- -----nav-middle--- -->
         <div class="nav-middle">
             <div class="search-box">
                 <input type="text" placeholder="Search">
@@ -23,6 +24,8 @@
             </div>
             <img src="../frontend/image.folder/mike.png" class="mike_icon">
         </div>
+
+
         <div class="nav-right ">
             <ul class="nav_ul">
                 <li class="nav_li  upload_li">
