--- a/frontend/history_page/history.css
+++ b/frontend/history_page/history.css
@@ -405,23 +405,63 @@
  .small-sidebar .subscribed-list{
      display: none;
  }
+
+ /* -----------main---------- */
  
 .main{
-    margin-left: 23%;
+    margin-left: 21%;
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.vid{
+ .main .vid{
     display: flex;
+    flex-direction: row;
+    align-items: start;
+
     margin-bottom: 17px;
+    justify-content: space-between;
 }
 
-.vid img{
-    border-radius: 15px;
+.vid a{
+    text-decoration: none;
 }
+
+.vid img {
+    /* border: 2px solid red; */
+    flex-basis: 30%;
+    width: 400px;
+    height: 210px;
+    border-radius: 15px;
+    object-fit: cover; /* Crop the image to fit the container while preserving aspect ratio */
+    box-shadow: 2px 2px 2px 2px gray;
+}
+
 
 .vid .vid_detail{
+    flex-basis: 70%;
     margin-left: 20px;
+    height: auto;
 }
+
+
+.vid_detail .video_title{
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+
+.vid_detail .channel_detail{
+    display: flex;
+    margin-bottom: 10px;
+
+}
+
+
+.channel_detail .channel_name{
+     margin-right: 10px;
+}
+
