--- a/frontend/login_page/login.style.css
+++ b/frontend/login_page/login.style.css
@@ -33,7 +33,7 @@
 .form-box h1{
      font-size: 3;
      margin-bottom: 20px;
-     color: #3c00a0;
+     color: #0c0c0c;
      position: relative;
 }
 
@@ -42,7 +42,7 @@
      width: 30px;
      height: 4px;
      border-radius:3px ;
-     background: #3c00a0;
+     background: #0c0714;
      position: absolute;
      bottom: -12px; 
      left: 50%;
@@ -86,7 +86,7 @@ form p{
 
 form p a{
      text-decoration: none;
-     color: #3c00a0;
+     color: #0c0811;
 }
 
 .btn-field{
@@ -98,7 +98,7 @@ form p a{
 
 .btn-field button{
      flex-basis: 48%;
-     background: #3c00a0;
+     background: #0d0b12;
      color: #fff;
      height: 40px;
      border-radius: 20px;
@@ -129,7 +129,7 @@ form p a{
      height: 40px;
      margin-left: 10%;
      border-radius: 20px;
-     background-color: rgba(174, 161, 252, 0.427);
+     background-color: rgba(220, 189, 233, 0.427);
      cursor: pointer;
 }
 
@@ -148,7 +148,7 @@ form .submit{
      width: 80%;
      max-width: 100px;
      height: 40px;
-     background-color: rgba(0, 102, 255, 0.633);
+     background-color: rgba(233, 235, 239, 0.633);
      border: 0;
      outline: 0;
      border-radius: 20px;
