--- a/view/style.css
+++ b/view/style.css
@@ -239,7 +239,7 @@ display: flex;
 
 
 
-
+/* --------------nav middle---------- */
 
 .nav-middle{
     width: 300px;
@@ -249,7 +249,7 @@ display: flex;
 }
 
 .search-box{
-    width: 300px;
+    width: 400px;
     height: 40px;
     border: 1px solid #ccc;
     display: flex;
@@ -263,8 +263,10 @@ display: flex;
 
 .nav-middle .search-box input{
     width: 400px;
+    height: 30px;
+    font-size: 16px;
     border: 0px;
-    outline: opx;
+    outline:0px;
     background: transparent;
 }
 
@@ -417,7 +419,7 @@ display: flex;
 
 
 .container{
-    background:#f9f9f9;
+    background:#fdfbfb;
     padding-left: 21%;
     padding-right: 2%;
     padding-top: 10px;
@@ -453,11 +455,18 @@ display: flex;
   /* height: fit-content; */
   border-radius: 10px;
   /* margin-left: 2px; */
+  box-shadow: 2px 2px 2px 2px rgb(214, 210, 210);
 }
 
 .vidlist .flex-div{
     align-items: flex-start;
     margin-top: 7px;
+}
+
+.flex-div .channel_name{
+    font-size: 14px;
+    color: black;
+    margin-bottom: 3px;
 }
 
 .vidlist .flex-div img{
@@ -469,7 +478,7 @@ display: flex;
 
 .video-info{
     color: #5a5a5a;
-    font-size: 13px;
+    font-size: 16px;
 }
 
 .video-info a{
