search function complete

--- a/view/index.html
+++ b/view/index.html
@@ -17,15 +17,16 @@
         </div>
 
         <!-- -----nav-middle--- -->
+        
         <div class="nav-middle">
             <div class="search-box">
-                <input type="text" placeholder="Search">
+                    <input type="text" placeholder="Search" class="search_input" >
                 <img src="../frontend/image.folder/search.png" class="search_icon">
             </div>
             <img src="../frontend/image.folder/mike.png" class="mike_icon">
         </div>
 
-
+       <!-- -----------navright-------------- -->
         <div class="nav-right ">
             <ul class="nav_ul">
                 <li class="nav_li  upload_li">
@@ -74,7 +75,7 @@
             <a href="" class="short sign"><img src="../frontend/image.folder/subscription.png" alt=""><p>Subcriptions</p></a>
           <hr>
             <a href="" class="short sign"><h4>You ></h3></a>
-            <a href="" class="short sign "><img src="../frontend/image.folder/history.png" alt=""><p>History</p></a>
+            <a href="/frontend/history_page/history.html" class="short sign "><img src="../frontend/image.folder/history.png" alt=""><p>History</p></a>
             <a href="" class="short" ><img src="../frontend/image.folder/watch_letter.png" alt=""><p>watch Later</p></a>
             <a href="" class="short"><img src="../frontend/image.folder/playlist.png" alt=""><p>playlist</p></a>
             <a href="" class="short"><img src="../frontend/image.folder/liked_video.png" alt=""><p>Liked video</p></a>
@@ -89,7 +90,7 @@
             <a href=""><img src="../frontend/image.folder/avatar.png">shah rahul</a>
             <a href=""><img src="../frontend/image.folder/avatar.png">shah rahul</a>
             <a href=""><img src="../frontend/image.folder/avatar.png">shah rahul</a>
-            <a href=""><img src="../frontend/image.folder/avatar.png">shah rahul</a>
+            <a href=""><img src="../frontend/image.folder/avatar.png">shah rahul </a>
         </div>
   </div>
 
