--- a/frontend/login_page/login.style.css
+++ b/frontend/login_page/login.style.css
@@ -13,6 +13,7 @@
      flex-direction: column;
      align-items: center;
      justify-content: center;
+   
 }
 
 .form-box{
@@ -27,6 +28,9 @@
      border-radius: 5px;
      padding: 50px 60px 70px;
      text-align: center;
+     /* border: 2px solid  black; */
+     /* background-color: rbga(0,0,0,.5); */
+     box-shadow: -2px 2px 15px #000;
 
 }
 
