--- a/frontend/play.folder/play.style.css
+++ b/frontend/play.folder/play.style.css
@@ -232,19 +232,21 @@ display: flex;
  align-items: center;
 }
 
+
+
+/* --------------nav middle---------- */
+
 .nav-middle{
     width: 300px;
     height: 40px;
     display: flex;
-    flex-direction: row;
 }
 
 .search-box{
-    width: 300px;
+    /* width: 400px; */
     height: 40px;
     border: 1px solid #ccc;
     display: flex;
-    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     margin-right: 15px;
@@ -254,8 +256,10 @@ display: flex;
 
 .nav-middle .search-box input{
     width: 400px;
+    height: 30px;
+    font-size: 16px;
     border: 0px;
-    outline: opx;
+    outline:0px;
     background: transparent;
 }
 
@@ -264,6 +268,8 @@ display: flex;
     height: 20px;
     margin-top: 3px;
 }
+
+
 
 /* -------- right sidebar-------------------*/
 
