--- a/frontend/search_page/search.css
+++ b/frontend/search_page/search.css
@@ -233,47 +233,47 @@
  }
  
  
- 
 /* --------------nav middle---------- */
 
 .nav-middle{
-    width: 300px;
-    height: 40px;
-    display: flex;
-}
-
-.search-box{
-    /* width: 400px; */
-    height: 40px;
-    border: 1px solid #ccc;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-right: 15px;
-    padding: 8px 12px;
-    border-radius: 25px;
-}
-
-.nav-middle .search-box input{
-    width: 400px;
-    height: 30px;
-    font-size: 16px;
-    border: 0px;
-    outline:0px;
-    background: transparent;
-}
-
-.nav-middle .search-box img{
-    width: 20px;
-    height: 20px;
-    margin-top: 3px;
-}
-
-
+     width: 300px;
+     height: 40px;
+     display: flex;
+ }
+ 
+ .search-box{
+     /* width: 400px; */
+     height: 40px;
+     border: 1px solid #ccc;
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+     margin-right: 15px;
+     padding: 8px 12px;
+     border-radius: 25px;
+ }
+ 
+ .nav-middle .search-box input{
+     width: 400px;
+     height: 30px;
+     font-size: 16px;
+     border: 0px;
+     outline:0px;
+     background: transparent;
+ }
+ 
+ .nav-middle .search-box img{
+     width: 20px;
+     height: 20px;
+     margin-top: 3px;
+ }
+ 
+ 
+ 
 /* -------------sidebar-------------------*/
 .sidebar{
      background: #fff;
-     width: 20%;
+     width: 15.5%;
      height: 100vh;
      position:absolute;
      /* border: 1px solid red; */
@@ -364,7 +364,7 @@
  .subscribed-list h3{
      font-size: 13px;
      margin: 20px 0;
-     color: #fc1e1e;
+     /* color: #fc1e1e; */
  }
  
  .subscribed-list a{
@@ -406,62 +406,113 @@
      display: none;
  }
 
- /* -----------main---------- */
- 
+
+/* main */
+
 .main{
-    margin-left: 21%;
-    padding-top: 20px;
+    margin-top: 7px;
+    margin-left: 16%;
+}
+
+
+.video_sub_main{
+    display: flex;
+    justify-content: space-between;
+    /* border: 2px solid red; */
+   
+}
+
+.video_sub_main .video_thumbnail{
+    flex-basis: 39.3%;
+    /* border: 2px solid rgb(0, 26, 255); */
+}
+
+.video_sub_main img{
+    width: 100%;
+    height: auto;
+    max-height: 281px;
+    object-fit: cover;
+    border-radius: 20px;
+    /* margin-bottom: 10px; */
+    padding: 7px;
+}
+
+
+.video_detail{
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-}
-
- .main .vid{
-    display: flex;
-    flex-direction: row;
-    align-items: start;
-
-    margin-bottom: 17px;
-    justify-content: space-between;
-}
-
-.vid a{
-    text-decoration: none;
-}
-
-.vid img {
+    flex-basis: 62%;
     /* border: 2px solid red; */
-    flex-basis: 30%;
-    width: 400px;
-    height: 210px;
-    border-radius: 15px;
-    object-fit: cover; /* Crop the image to fit the container while preserving aspect ratio */
-    box-shadow: 2px 2px 2px 2px gray;
 }
 
 
-.vid .vid_detail{
-    flex-basis: 70%;
-    margin-left: 20px;
-    height: auto;
+.video_detail .video_title {
+  font-size:  20px;
+  /* font-weight:600; */
+  margin-bottom: 7px;
+  /* margin-bottom: 2%; */
+  /* border: 2px solid gray; */
+
 }
 
-
-.vid_detail .video_title{
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-
-
-.vid_detail .channel_detail{
+.view_duration{
     display: flex;
-    margin-bottom: 10px;
-
+    justify-content: first baseline;
+    margin-bottom: 7px;
+    /* margin-bottom: 1%; */
+    /* border: 2px solid red; */
 }
 
+.view_duration .views{
+    margin-right: 15px;
+}
+
+.video_detail .channel_detail{
+ display: flex;
+ align-items: center;
+ justify-content:flex-start;
+ /* border: 2px solid red; */
+}
+
+
+.video_detail img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
 
 .channel_detail .channel_name{
-     margin-right: 10px;
+    margin-left: 10px;
 }
 
+.video_description{
+    margin-top: 10px;
+    /* margin-top: ; */
+}
+
+.no_result{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10%;
+}
+
+.no_result img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: -2px 2px 2px 2px rgb(188, 185, 185);    
+    margin-bottom: 10px;
+}
+
+.no_result p{
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.no_result .found{
+    font-weight: 600;
+}
