--- a/view/index.html
+++ b/view/index.html
@@ -33,7 +33,7 @@
                     <img src="../frontend/image.folder/upload.png" class="upload">
                     <div class="sub-class">
                         <ul class="upload_ul">
-                            <li><img src="../frontend/image.folder/upload_video.png" alt=""><a href="">Upload Video</a></li>
+                            <li><img src="../frontend/image.folder/upload_video.png" alt=""><a href="../frontend/upload_page/upload.html">Upload Video</a></li>
                             <li><img src="../frontend/image.folder/upload_post.png" alt=""><a href="">Upload Post</a></li>
                         </ul>
                     </div>
@@ -86,12 +86,11 @@
         
         <div class="subscribed-list">
             <H3>SUBSCRIBED</H3>
-            <a href=""><img src="../frontend/image.folder/avatar.png">shah rahul</a>
-            <a href=""><img src="../frontend/image.folder/avatar.png">shah rahul</a>
-            <a href=""><img src="../frontend/image.folder/avatar.png">shah rahul</a>
-            <a href=""><img src="../frontend/image.folder/avatar.png">shah rahul</a>
-            <a href=""><img src="../frontend/image.folder/avatar.png">shah rahul </a>
+            <div class="subscribed_content">
+                <!-- <a href="../frontend/profile_page/profile.html?owner_id="></a> -->
+            </div>
         </div>
+
   </div>
 
 
