--- a/frontend/history_page/history.css
+++ b/frontend/history_page/history.css
@@ -378,9 +378,14 @@
  
  .subscribed-list a img{
      width: 25px;
+     height: 25px;
+     margin-left: 10px;
      border-radius: 50%;
      margin-right: 20px;
- 
+ }
+
+ .subscribed-list h3{
+    margin-left: 10px;
  }
  
  .small-sidebar{
