--- a/frontend/search_page/search.css
+++ b/frontend/search_page/search.css
@@ -364,6 +364,7 @@
  .subscribed-list h3{
      font-size: 13px;
      margin: 20px 0;
+     margin-left: 10px;
      /* color: #fc1e1e; */
  }
  
@@ -378,6 +379,8 @@
  
  .subscribed-list a img{
      width: 25px;
+     height: 25px;
+     margin-left: 10px;
      border-radius: 50%;
      margin-right: 20px;
  
