--- a/view/style.css
+++ b/view/style.css
@@ -367,6 +367,11 @@ display: flex;
  align-items: center;
 }
 
+
+.subscribed-list{
+    margin-left: 10px;
+}
+
 .subscribed-list h3{
     font-size: 13px;
     margin: 20px 0;
@@ -384,6 +389,7 @@ display: flex;
 
 .subscribed-list a img{
     width: 25px;
+    height: 25px;
     border-radius: 50%;
     margin-right: 20px;
 
