--- a/frontend/profile_page/profile.css
+++ b/frontend/profile_page/profile.css
@@ -61,6 +61,7 @@
      padding-left: 30px;
  }
  
+
  .sub-class{
      display: none;
      /* border: 1px solid red; */
@@ -551,6 +552,8 @@
 
  /* -----------main---------- */
  
+
+ /* --------------home------------ */
  .home{
     padding-top: 20px;
     display: flex;
@@ -609,4 +612,237 @@
 }
 
 
+/* ------------community------------ */
 
+
+.Community{
+    display: flex;
+    flex-direction: column;
+    /* height: auto; */
+    border: 2px solid rgb(232, 230, 230);
+    border-radius: 10px;
+    margin-right: 30%;
+    margin-left: 2%;
+    margin-top: 5px;
+}
+
+.Community .comm{
+    display:  flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 2px solid red; */
+    margin: 10px;
+
+}
+
+.comm .channel_detail{
+    /* flex-basis: 30%; */
+    /* width: 30%; */
+    display: flex;
+    /* flex-direction: row; */
+    /* border: 2px solid red; */
+    justify-content: space-around;
+    align-items: center;
+}
+
+.Community .comm img{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    /* padding: 5px; */
+    margin-right: 20px;
+    margin-left: 5px;
+}
+
+.channel_detail .channel_name{
+    margin-left: 20px;
+}
+
+.tweet_detail{
+    /* width: 100%; */
+    /* height: 70px; */
+    /* border: 2px solid red; */
+    /* margin: 10px; */
+}
+
+.tweet_detail textarea{
+    width: 100%;
+    min-height: 1px;
+    font-size: 16px;
+    padding: 10px;
+    /* border: 1px solid #f70c0c; */
+    border-radius: 5px;
+    resize: none; /* Disable manual resizing */
+    overflow: hidden; /* Hide scrollbars */
+    outline: 0px;
+    border: 0px;
+}
+
+
+
+.Community .tweet_photo{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+.Community .image_detail{
+    display: flex;
+    align-content: center;
+    /* background-color: rgb(236, 235, 235); */
+    border-radius: 20px;
+    padding: 10px;
+    padding-bottom: 27px;
+    width: 120px;
+    height: 27px;
+    /* margin-right: 5px; */
+    cursor: pointer;
+}
+
+.Community .image_detail:hover{
+    background-color: rgb(228, 228, 228);
+}
+
+  .Community .tweet_photo img{
+      width: 25px;
+      height: 25px;
+      margin-right: 15px;
+  }
+
+  .Community .tweet_photo button{
+    width: 70px;
+    height: 30px;   
+    border-radius: 15px;
+    border: 0px;
+    outline: 0px;
+    cursor: pointer;
+  }
+
+  .published{
+    margin-top: 20px;
+    margin-left: 10px;
+  }
+
+  .published h3{
+    margin-left: 10px;
+    /* background-color: rgb(230, 225, 225); */
+    width:fit-content;
+    padding: 2px 10px;
+    border-radius: 5px;
+  }
+  
+
+
+.show{
+    display: flex;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    width: 70%;
+    margin-left: 2%;
+    margin-top: 2%;
+}
+
+
+.show_tweet_image img{
+    width: 638px;
+    height: 638px;
+    border-radius: 20px;
+    object-fit: contain;
+    object-fit: cover;
+    /* border: 2px solid red; */
+}
+
+.show_avatar{
+    /* margin: 35px; */
+    /* border: 2px solid rebeccapurple; */
+    width: 5%;
+    margin-left: 10px!important;
+    margin-top: 10px!important;
+    /* margin-left: 55px; */
+}
+
+.show_tweet_detail{
+    /* margin-bottom: 60px; */
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-evenly;
+    /* border: 2px solid red; */
+    flex-basis: 88%;
+}
+
+.show_tweet_detail div{
+    margin-bottom: 10px!important;
+    font-size: 18px;
+}
+
+.tweet_reaction{
+    /* background-color: gray; */
+    width: 100px;
+    
+}
+.tweet_reaction img{
+    width: 20px;
+    height: 20px;
+    margin-left: 20px;
+}
+
+/* option */
+
+.option{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    /* background-color: black; */
+}
+
+.option_sub_class{
+    display: none;
+}
+
+.sub_class_click{
+    display: block;
+}
+
+.option_ul_click {
+    display: block; /* Change this to block to show the menu */
+}
+
+.option_ul {
+    /* display: none; */
+    position: absolute;
+    top: 40px;
+    list-style-type: none;
+    background-color: rgb(240, 240, 240);
+    border-radius: 7px;
+    padding: 5px;
+    width: 100px;
+    height: auto;
+}
+
+
+
+.option li{
+    margin-left: 5px;
+    margin-bottom: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.option_ul .option li img{
+    height: 17px;
+    width: 17px;
+}
+
+
+.option img{
+    width: 20px;
+    height: 20px;
+    margin-right: 10%;
+    margin-top: 10px;
+}
+
+.show div
+{
+    margin: 2px;
+}
