tweet_edit complete

--- a/view/index.html
+++ b/view/index.html
@@ -34,7 +34,7 @@
                     <div class="sub-class">
                         <ul class="upload_ul">
                             <li><img src="../frontend/image.folder/upload_video.png" alt=""><a href="../frontend/upload_page/upload.html">Upload Video</a></li>
-                            <li><img src="../frontend/image.folder/upload_post.png" alt=""><a href="">Upload Post</a></li>
+                            <li><img src="../frontend/image.folder/upload_post.png" alt=""><a href="../frontend/profile_page/profile.html">Upload Post</a></li>
                         </ul>
                     </div>
                 </li>
