--- a/frontend/profile_page/profile.css
+++ b/frontend/profile_page/profile.css
@@ -775,11 +775,44 @@
     font-size: 18px;
 }
 
+.uploaded_image{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0px;
+    display: none;
+}
+
+.uploaded_image img{
+    width: 600px;
+    height: 450px;
+    border: 1px solid rgb(157, 157, 183);
+    border-radius: 10px;
+    object-fit: cover;
+    
+    
+
+}
+
 .tweet_reaction{
     /* background-color: gray; */
-    width: 100px;
-    
+    /* width: 100px; */
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
 }
+
+.tweet_reaction  button{
+    width: 70px;
+    height: 30px;
+    border-radius: 20px;
+    outline: 0px;
+    border: 0px;
+}
+
 .tweet_reaction img{
     width: 20px;
     height: 20px;
