--- a/frontend/play.folder/play.style.css
+++ b/frontend/play.folder/play.style.css
@@ -449,6 +449,13 @@ font-weight: bold;
     padding: 18px;
 }
 
+.vid-info .gap{
+    content: "";
+    height: 50px;
+    width: 50px;
+    border: 2px solid red;
+    background-color: black;
+}
 .like_button{
     display: flex;
     align-items: center;
@@ -458,8 +465,9 @@ font-weight: bold;
 }
 
 .video_info img{
-    width: 30px;
-    height: 20px;
+    width: 25px;
+    height: 23px;
+    margin: 5px;
  
 }
 
@@ -565,8 +573,8 @@ font-weight: bold;
     border-bottom: 2px solid rgb(236, 236, 236);
 }
 .old-comments img{
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 23px;
     border-radius: 50%;
     margin-right: 15px;
 }
@@ -593,8 +601,8 @@ font-weight: bold;
 
 .old-comments .comment-action img{
     border-radius: 0;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     margin-right: 10px;
 }
 
